// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";

import "./AlertingWay.proto";

package opAlert.protobuf;

message OpAlertConfiguration {
extensions 5 to 105;

  optional ccsds_mal.protobuf.INTEGER numberCalls = 1;
  optional opAlert.protobuf.AlertingWay alertingWay = 2;
  optional ccsds_mal.protobuf.INTEGER maxNumberRetries = 3;
  optional ccsds_mal.protobuf.DURATION delayRetries = 4;
}
