// Produced by Acceleo JavaScript Generator 1.1.2
/* eslint-disable max-len, "DV6 TBC_CNES generated file" */
const OpAlert = require('./opAlert');
const OpAlertClosingData = require('./opAlertClosingData');
const OpAlertConfiguration = require('./opAlertConfiguration');

module.exports = {
  OpAlert: {type: "protobuf", adapter: OpAlert},
  OpAlertClosingData: {type: "protobuf", adapter: OpAlertClosingData},
  OpAlertConfiguration: {type: "protobuf", adapter: OpAlertConfiguration},
};
