// Produced by Acceleo JavaScript Generator 1.1.2
/* eslint-disable max-len, "DV6 TBC_CNES generated code can't avoid too long lines" */
/* eslint-disable complexity, "DV6 TBC_CNES generated code can't avoid complexity" */
const OpAlert = require('./opAlert');
const OpAlertConfiguration = require('./opAlertConfiguration');
const OpAlertClosingData = require('./opAlertClosingData');

module.exports = {
  OpAlert: { type: 'protobuf', adapter: OpAlert },
  OpAlertConfiguration: { type: 'protobuf', adapter: OpAlertConfiguration },
  OpAlertClosingData: { type: 'protobuf', adapter: OpAlertClosingData },
};
